# Copyright 2016 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Things are easiest for everyone if these source paths are absolute.
_src = get_path_info("../src", "abspath")
_include = get_path_info("../include", "abspath")

skia_core_public = [
  "$_include/core/SkAnnotation.h",
  "$_include/core/SkBBHFactory.h",
  "$_include/core/SkBitmap.h",
  "$_include/core/SkBlendMode.h",
  "$_include/core/SkBlurTypes.h",
  "$_include/core/SkCanvas.h",
  "$_include/core/SkCanvasVirtualEnforcer.h",
  "$_include/core/SkClipOp.h",
  "$_include/core/SkColor.h",
  "$_include/core/SkColorFilter.h",
  "$_include/core/SkColorPriv.h",
  "$_include/core/SkColorSpace.h",
  "$_include/core/SkContourMeasure.h",
  "$_include/core/SkCoverageMode.h",
  "$_include/core/SkCubicMap.h",
  "$_include/core/SkData.h",
  "$_include/core/SkDataTable.h",
  "$_include/core/SkDeferredDisplayListRecorder.h",
  "$_include/core/SkDeque.h",
  "$_include/core/SkDocument.h",
  "$_include/core/SkDrawLooper.h",
  "$_include/core/SkDrawable.h",
  "$_include/core/SkEncodedImageFormat.h",
  "$_include/core/SkExecutor.h",
  "$_include/core/SkFilterQuality.h",
  "$_include/core/SkFlattenable.h",
  "$_include/core/SkFont.h",
  "$_include/core/SkFontArguments.h",
  "$_include/core/SkFontLCDConfig.h",
  "$_include/core/SkFontMetrics.h",
  "$_include/core/SkFontMgr.h",
  "$_include/core/SkFontParameters.h",
  "$_include/core/SkFontStyle.h",
  "$_include/core/SkFontTypes.h",
  "$_include/core/SkGraphics.h",
  "$_include/core/SkICC.h",
  "$_include/core/SkImage.h",
  "$_include/core/SkImageEncoder.h",
  "$_include/core/SkImageFilter.h",
  "$_include/core/SkImageGenerator.h",
  "$_include/core/SkImageInfo.h",
  "$_include/core/SkMallocPixelRef.h",
  "$_include/core/SkMaskFilter.h",
  "$_include/core/SkMath.h",
  "$_include/core/SkMatrix.h",
  "$_include/core/SkMatrix44.h",
  "$_include/core/SkMilestone.h",
  "$_include/core/SkOverdrawCanvas.h",
  "$_include/core/SkPaint.h",
  "$_include/core/SkPath.h",
  "$_include/core/SkPathEffect.h",
  "$_include/core/SkPathMeasure.h",
  "$_include/core/SkPixelRef.h",
  "$_include/core/SkPixmap.h",
  "$_include/core/SkPngChunkReader.h",
  "$_include/core/SkPoint.h",
  "$_include/core/SkPoint3.h",
  "$_include/core/SkPostConfig.h",
  "$_include/core/SkPreConfig.h",
  "$_include/core/SkPromiseImageTexture.h",
  "$_include/core/SkRRect.h",
  "$_include/core/SkRSXform.h",
  "$_include/core/SkRWBuffer.h",
  "$_include/core/SkRasterHandleAllocator.h",
  "$_include/core/SkRect.h",
  "$_include/core/SkRefCnt.h",
  "$_include/core/SkRegion.h",
  "$_include/core/SkScalar.h",
  "$_include/core/SkSerialProcs.h",
  "$_include/core/SkShader.h",
  "$_include/core/SkSize.h",
  "$_include/core/SkStream.h",
  "$_include/core/SkString.h",
  "$_include/core/SkStrokeRec.h",
  "$_include/core/SkSurface.h",
  "$_include/core/SkSurfaceCharacterization.h",
  "$_include/core/SkSurfaceProps.h",
  "$_include/core/SkSwizzle.h",
  "$_include/core/SkTextBlob.h",
  "$_include/core/SkTime.h",
  "$_include/core/SkTraceMemoryDump.h",
  "$_include/core/SkTypeface.h",
  "$_include/core/SkTypes.h",
  "$_include/core/SkUnPreMultiply.h",
  "$_include/core/SkVertices.h",
  "$_include/core/SkYUVAIndex.h",
  "$_include/core/SkYUVASizeInfo.h",
]

skia_core_sources = [
  "$_src/c/sk_imageinfo.cpp",
  "$_src/c/sk_paint.cpp",
  "$_src/c/sk_surface.cpp",
  "$_src/c/sk_types_priv.h",

  "$_src/core/Sk4px.h",
  "$_src/core/SkAAClip.cpp",
  "$_src/core/SkAnnotation.cpp",
  "$_src/core/SkAdvancedTypefaceMetrics.h",
  "$_src/core/SkAlphaRuns.cpp",
  "$_src/core/SkAntiRun.h",
  "$_src/core/SkATrace.cpp",
  "$_src/core/SkATrace.h",
  "$_src/core/SkAutoPixmapStorage.h",
  "$_src/core/SkAutoPixmapStorage.cpp",
  "$_src/core/SkBBHFactory.cpp",
  "$_src/core/SkBBoxHierarchy.h",
  "$_src/core/SkBitmap.cpp",
  "$_src/core/SkBitmapCache.cpp",
  "$_src/core/SkBitmapController.cpp",
  "$_src/core/SkBitmapDevice.cpp",
  "$_src/core/SkBitmapDevice.h",
  "$_src/core/SkBitmapProcState.cpp",
  "$_src/core/SkBitmapProcState.h",
  "$_src/core/SkBitmapProcState_matrixProcs.cpp",
  "$_src/core/SkBitmapProvider.cpp",
  "$_src/core/SkBitmapProvider.h",
  "$_src/core/SkBlendMode.cpp",
  "$_src/core/SkBlitBWMaskTemplate.h",
  "$_src/core/SkBlitRow.h",
  "$_src/core/SkBlitRow_D32.cpp",
  "$_src/core/SkBlitter.h",
  "$_src/core/SkBlitter.cpp",
  "$_src/core/SkBlitter_A8.cpp",
  "$_src/core/SkBlitter_ARGB32.cpp",
  "$_src/core/SkBlitter_RGB565.cpp",
  "$_src/core/SkBlitter_Sprite.cpp",
  "$_src/core/SkBlurMask.cpp",
  "$_src/core/SkBlurMask.h",
  "$_src/core/SkBlurMF.cpp",
  "$_src/core/SkBuffer.cpp",
  "$_src/core/SkCachedData.cpp",
  "$_src/core/SkCanvas.cpp",
  "$_src/core/SkCanvasPriv.cpp",
  "$_src/core/SkCanvasPriv.h",
  "$_src/core/SkClipStack.cpp",
  "$_src/core/SkClipStack.h",
  "$_src/core/SkClipStackDevice.cpp",
  "$_src/core/SkClipStackDevice.h",
  "$_src/core/SkColor.cpp",
  "$_src/core/SkColorFilter.cpp",
  "$_src/core/SkColorFilter_Matrix.cpp",
  "$_src/core/SkColorFilter_Matrix.h",
  "$_src/core/SkColorSpace.cpp",
  "$_src/core/SkColorSpaceXformSteps.cpp",
  "$_src/core/SkContourMeasure.cpp",
  "$_src/core/SkConvertPixels.cpp",
  "$_src/core/SkConvertPixels.h",
  "$_src/core/SkCoreBlitters.h",
  "$_src/core/SkCpu.cpp",
  "$_src/core/SkCpu.h",
  "$_src/core/SkCubicClipper.cpp",
  "$_src/core/SkCubicClipper.h",
  "$_src/core/SkCubicMap.cpp",
  "$_src/core/SkData.cpp",
  "$_src/core/SkDataTable.cpp",
  "$_src/core/SkDebug.cpp",
  "$_src/core/SkDeferredDisplayListPriv.h",
  "$_src/core/SkDeferredDisplayList.cpp",
  "$_src/core/SkDeferredDisplayListRecorder.cpp",
  "$_src/core/SkDeque.cpp",
  "$_src/core/SkDescriptor.cpp",
  "$_src/core/SkDescriptor.h",
  "$_src/core/SkDevice.cpp",
  "$_src/core/SkDevice.h",
  "$_src/core/SkDiscardableMemory.h",
  "$_src/lazy/SkDiscardableMemoryPool.cpp",
  "$_src/core/SkDistanceFieldGen.cpp",
  "$_src/core/SkDistanceFieldGen.h",
  "$_src/core/SkDocument.cpp",
  "$_src/core/SkDraw.cpp",
  "$_src/core/SkDraw_text.cpp",
  "$_src/core/SkDraw_vertices.cpp",
  "$_src/core/SkDraw.h",
  "$_src/core/SkDrawable.cpp",
  "$_src/core/SkDrawLooper.cpp",
  "$_src/core/SkDrawProcs.h",
  "$_src/core/SkDrawShadowInfo.cpp",
  "$_src/core/SkDrawShadowInfo.h",
  "$_src/core/SkEdgeBuilder.cpp",
  "$_src/core/SkEdgeBuilder.h",
  "$_src/core/SkEdgeClipper.cpp",
  "$_src/core/SkEdgeClipper.h",
  "$_src/core/SkEndian.h",
  "$_src/core/SkExecutor.cpp",
  "$_src/core/SkAnalyticEdge.cpp",
  "$_src/core/SkEdge.cpp",
  "$_src/core/SkEdge.h",
  "$_src/core/SkFDot6.h",
  "$_src/core/SkArenaAlloc.cpp",
  "$_src/core/SkArenaAllocList.h",
  "$_src/core/SkGaussFilter.cpp",
  "$_src/core/SkGaussFilter.h",
  "$_src/core/SkFlattenable.cpp",
  "$_src/core/SkFont.cpp",
  "$_src/core/SkFontLCDConfig.cpp",
  "$_src/core/SkFontMgr.cpp",
  "$_src/core/SkFontDescriptor.cpp",
  "$_src/core/SkFontDescriptor.h",
  "$_src/core/SkFontPriv.cpp",
  "$_src/core/SkFontStream.cpp",
  "$_src/core/SkFontStream.h",
  "$_src/core/SkFuzzLogging.h",
  "$_src/core/SkGeometry.cpp",
  "$_src/core/SkGeometry.h",
  "$_src/core/SkGlobalInitialization_core.cpp",
  "$_src/core/SkGlyph.h",
  "$_src/core/SkGlyph.cpp",
  "$_src/core/SkGlyphRun.cpp",
  "$_src/core/SkGlyphRun.h",
  "$_src/core/SkGlyphRunPainter.cpp",
  "$_src/core/SkGlyphRunPainter.h",
  "$_src/core/SkGpuBlurUtils.h",
  "$_src/core/SkGpuBlurUtils.cpp",
  "$_src/core/SkGraphics.cpp",
  "$_src/core/SkHalf.cpp",
  "$_src/core/SkICC.cpp",
  "$_src/core/SkImageFilter.cpp",
  "$_src/core/SkImageFilterCache.cpp",
  "$_src/core/SkImageFilterCache.h",
  "$_src/core/SkImageInfo.cpp",
  "$_src/core/SkImageGenerator.cpp",
  "$_src/core/SkLineClipper.cpp",
  "$_src/core/SkLiteDL.cpp",
  "$_src/core/SkLiteRecorder.cpp",
  "$_src/core/SkLocalMatrixImageFilter.cpp",
  "$_src/core/SkLocalMatrixImageFilter.h",
  "$_src/core/SkMD5.cpp",
  "$_src/core/SkMD5.h",
  "$_src/core/SkMakeUnique.h",
  "$_src/core/SkMallocPixelRef.cpp",
  "$_src/core/SkMask.cpp",
  "$_src/core/SkMask.h",
  "$_src/core/SkMaskBlurFilter.h",
  "$_src/core/SkMaskBlurFilter.cpp",
  "$_src/core/SkMaskCache.cpp",
  "$_src/core/SkMaskFilter.cpp",
  "$_src/core/SkMaskGamma.cpp",
  "$_src/core/SkMaskGamma.h",
  "$_src/core/SkMath.cpp",
  "$_src/core/SkMathPriv.h",
  "$_src/core/SkMatrix.cpp",
  "$_src/core/SkMatrix44.cpp",
  "$_src/core/SkMatrixImageFilter.cpp",
  "$_src/core/SkMatrixImageFilter.h",
  "$_src/core/SkMatrixUtils.h",
  "$_src/core/SkMipMap.cpp",
  "$_src/core/SkMipMap.h",
  "$_src/core/SkMiniRecorder.cpp",
  "$_src/core/SkMiniRecorder.h",
  "$_src/core/SkModeColorFilter.cpp",
  "$_src/core/SkNextID.h",
  "$_src/core/SkLatticeIter.cpp",
  "$_src/core/SkLatticeIter.h",
  "$_src/core/SkNormalFlatSource.cpp",
  "$_src/core/SkNormalFlatSource.h",
  "$_src/core/SkNormalMapSource.cpp",
  "$_src/core/SkNormalMapSource.h",
  "$_src/core/SkNormalSource.cpp",
  "$_src/core/SkNormalSource.h",
  "$_src/core/SkOpts.cpp",
  "$_src/core/SkOpts.h",
  "$_src/core/SkOrderedReadBuffer.h",
  "$_src/core/SkOSFile.h",
  "$_src/core/SkOverdrawCanvas.cpp",
  "$_src/core/SkPaint.cpp",
  "$_src/core/SkPaintDefaults.h",
  "$_src/core/SkPaintPriv.cpp",
  "$_src/core/SkPaintPriv.h",
  "$_src/core/SkPath.cpp",
  "$_src/core/SkPath_serial.cpp",
  "$_src/core/SkPathEffect.cpp",
  "$_src/core/SkPathMeasure.cpp",
  "$_src/core/SkPathPriv.h",
  "$_src/core/SkPathRef.cpp",
  "$_src/core/SkPixelRef.cpp",
  "$_src/core/SkPixmap.cpp",
  "$_src/core/SkPoint.cpp",
  "$_src/core/SkPoint3.cpp",
  "$_src/core/SkPromiseImageTexture.cpp",
  "$_src/core/SkPtrRecorder.cpp",
  "$_src/core/SkQuadClipper.cpp",
  "$_src/core/SkQuadClipper.h",
  "$_src/core/SkRasterClip.cpp",
  "$_src/core/SkRasterPipeline.cpp",
  "$_src/core/SkRasterPipelineBlitter.cpp",
  "$_src/core/SkReadBuffer.h",
  "$_src/core/SkReadBuffer.cpp",
  "$_src/core/SkReader32.h",
  "$_src/core/SkRecord.cpp",
  "$_src/core/SkRecords.cpp",
  "$_src/core/SkRecords.h",
  "$_src/core/SkRecordDraw.cpp",
  "$_src/core/SkRecordOpts.cpp",
  "$_src/core/SkRecordOpts.h",
  "$_src/core/SkRecordPattern.h",
  "$_src/core/SkRect.cpp",
  "$_src/core/SkRegion.cpp",
  "$_src/core/SkRegionPriv.h",
  "$_src/core/SkRegion_path.cpp",
  "$_src/core/SkRemoteGlyphCache.h",
  "$_src/core/SkRemoteGlyphCache.cpp",
  "$_src/core/SkRemoteGlyphCacheImpl.h",
  "$_src/core/SkResourceCache.cpp",
  "$_src/core/SkRRect.cpp",
  "$_src/core/SkRRectPriv.h",
  "$_src/core/SkRTree.h",
  "$_src/core/SkRTree.cpp",
  "$_src/core/SkRWBuffer.cpp",
  "$_src/core/SkScalar.cpp",
  "$_src/core/SkScalerContext.cpp",
  "$_src/core/SkScalerContext.h",
  "$_src/core/SkScaleToSides.h",
  "$_src/core/SkScan.cpp",
  "$_src/core/SkScan.h",
  "$_src/core/SkScanPriv.h",
  "$_src/core/SkScan_AAAPath.cpp",
  "$_src/core/SkScan_AntiPath.cpp",
  "$_src/core/SkScan_Antihair.cpp",
  "$_src/core/SkScan_Hairline.cpp",
  "$_src/core/SkScan_Path.cpp",
  "$_src/core/SkScopeExit.h",
  "$_src/core/SkSemaphore.cpp",
  "$_src/core/SkSharedMutex.cpp",
  "$_src/core/SkSharedMutex.h",
  "$_src/core/SkSpan.h",
  "$_src/core/SkSpecialImage.cpp",
  "$_src/core/SkSpecialImage.h",
  "$_src/core/SkSpecialSurface.cpp",
  "$_src/core/SkSpecialSurface.h",
  "$_src/core/SkSpinlock.cpp",
  "$_src/core/SkSpriteBlitter_ARGB32.cpp",
  "$_src/core/SkSpriteBlitter_RGB565.cpp",
  "$_src/core/SkSpriteBlitter.h",
  "$_src/core/SkStream.cpp",
  "$_src/core/SkStreamPriv.h",
  "$_src/core/SkStrike.cpp",
  "$_src/core/SkStrike.h",
  "$_src/core/SkStrikeCache.cpp",
  "$_src/core/SkStrikeCache.h",
  "$_src/core/SkStrikeInterface.h",
  "$_src/core/SkString.cpp",
  "$_src/core/SkStringUtils.cpp",
  "$_src/core/SkStroke.h",
  "$_src/core/SkStroke.cpp",
  "$_src/core/SkStrokeRec.cpp",
  "$_src/core/SkStrokerPriv.cpp",
  "$_src/core/SkStrokerPriv.h",
  "$_src/core/SkSurfaceCharacterization.cpp",
  "$_src/core/SkSurfacePriv.h",
  "$_src/core/SkSwizzle.cpp",
  "$_src/core/SkTaskGroup.cpp",
  "$_src/core/SkTaskGroup.h",
  "$_src/core/SkTDPQueue.h",
  "$_src/core/SkTDynamicHash.h",
  "$_src/core/SkTextBlob.cpp",
  "$_src/core/SkTextBlobPriv.h",
  "$_src/core/SkTextFormatParams.h",
  "$_src/core/SkTextToPathIter.h",
  "$_src/core/SkTime.cpp",

  "$_src/core/SkThreadID.cpp",
  "$_src/core/SkTLazy.h",
  "$_src/core/SkTLList.h",
  "$_src/core/SkTLS.cpp",
  "$_src/core/SkTMultiMap.h",
  "$_src/core/SkTraceEvent.h",
  "$_src/core/SkTraceEventCommon.h",
  "$_src/core/SkTSearch.cpp",
  "$_src/core/SkTSort.h",
  "$_src/core/SkTTopoSort.h",
  "$_src/core/SkTypeface.cpp",
  "$_src/core/SkTypeface_remote.h",
  "$_src/core/SkTypeface_remote.cpp",
  "$_src/core/SkTypefaceCache.cpp",
  "$_src/core/SkTypefaceCache.h",
  "$_src/core/SkTypefacePriv.h",
  "$_src/core/SkUnPreMultiply.cpp",
  "$_src/core/SkUtils.cpp",
  "$_src/core/SkUtils.h",
  "$_src/core/SkValidationUtils.h",
  "$_src/core/SkVertices.cpp",
  "$_src/core/SkVertState.cpp",
  "$_src/core/SkWriteBuffer.cpp",
  "$_src/core/SkWriter32.cpp",
  "$_src/core/SkWriter32.h",
  "$_src/core/SkXfermode.cpp",
  "$_src/core/SkXfermodeInterpretation.cpp",
  "$_src/core/SkXfermodeInterpretation.h",
  "$_src/core/SkYUVPlanesCache.cpp",
  "$_src/core/SkYUVPlanesCache.h",
  "$_src/core/SkYUVASizeInfo.cpp",

  "$_src/image/SkImage.cpp",

  #        "$_src/image/SkImage_Gpu.cpp",
  "$_src/image/SkImage_Lazy.cpp",
  "$_src/image/SkImage_Lazy.h",
  "$_src/image/SkImage_Raster.cpp",
  "$_src/image/SkSurface.cpp",
  "$_src/image/SkSurface_Base.h",

  #        "$_src/image/SkSurface_Gpu.cpp",
  "$_src/image/SkSurface_Raster.cpp",

  "$_src/shaders/SkBitmapProcShader.cpp",
  "$_src/shaders/SkBitmapProcShader.h",
  "$_src/shaders/SkColorFilterShader.cpp",
  "$_src/shaders/SkColorFilterShader.h",
  "$_src/shaders/SkColorShader.cpp",
  "$_src/shaders/SkColorShader.h",
  "$_src/shaders/SkComposeShader.cpp",
  "$_src/shaders/SkComposeShader.h",
  "$_src/shaders/SkEmptyShader.h",
  "$_src/shaders/SkImageShader.cpp",
  "$_src/shaders/SkImageShader.h",
  "$_src/shaders/SkLightingShader.cpp",
  "$_src/shaders/SkLightingShader.h",
  "$_src/shaders/SkLights.cpp",
  "$_src/shaders/SkLights.h",
  "$_src/shaders/SkLocalMatrixShader.cpp",
  "$_src/shaders/SkLocalMatrixShader.h",
  "$_src/shaders/SkShader.cpp",
  "$_src/shaders/SkShaderBase.h",

  "$_src/opts/SkBlitMask_opts.h",
  "$_src/opts/SkBlitRow_opts.h",
  "$_src/opts/SkChecksum_opts.h",
  "$_src/opts/SkRasterPipeline_opts.h",
  "$_src/opts/SkSwizzler_opts.h",
  "$_src/opts/SkUtils_opts.h",
  "$_src/opts/SkXfermode_opts.h",

  # private
  "$_include/private/SkArenaAlloc.h",
  "$_include/private/SkChecksum.h",
  "$_include/private/SkDeferredDisplayList.h",
  "$_include/private/SkFixed.h",
  "$_include/private/SkFloatBits.h",
  "$_include/private/SkFloatingPoint.h",
  "$_include/private/SkHalf.h",
  "$_include/private/SkMalloc.h",
  "$_include/private/SkMessageBus.h",
  "$_include/private/SkMutex.h",
  "$_include/private/SkNoncopyable.h",
  "$_include/private/SkNx.h",
  "$_include/private/SkNx_neon.h",
  "$_include/private/SkNx_sse.h",
  "$_include/private/SkOnce.h",
  "$_include/private/SkPathRef.h",
  "$_include/private/SkSemaphore.h",
  "$_include/private/SkShadowFlags.h",
  "$_include/private/SkSpinlock.h",
  "$_include/private/SkTemplates.h",
  "$_include/private/SkTArray.h",
  "$_include/private/SkTDArray.h",
  "$_include/private/SkTFitsIn.h",
  "$_include/private/SkTHash.h",
  "$_include/private/SkTInternalLList.h",
  "$_include/private/SkThreadAnnotations.h",
  "$_include/private/SkThreadID.h",
  "$_include/private/SkTSearch.h",
  "$_include/private/SkTLogic.h",
  "$_include/private/SkWeakRefCnt.h",
]

skia_pathops_public = [ "$_include/pathops/SkPathOps.h" ]

skia_pathops_sources = [
  "$_src/pathops/SkAddIntersections.cpp",
  "$_src/pathops/SkDConicLineIntersection.cpp",
  "$_src/pathops/SkDCubicLineIntersection.cpp",
  "$_src/pathops/SkDCubicToQuads.cpp",
  "$_src/pathops/SkDLineIntersection.cpp",
  "$_src/pathops/SkDQuadLineIntersection.cpp",
  "$_src/pathops/SkIntersections.cpp",
  "$_src/pathops/SkOpAngle.cpp",
  "$_src/pathops/SkOpBuilder.cpp",
  "$_src/pathops/SkOpCoincidence.cpp",
  "$_src/pathops/SkOpContour.cpp",
  "$_src/pathops/SkOpCubicHull.cpp",
  "$_src/pathops/SkOpEdgeBuilder.cpp",
  "$_src/pathops/SkOpSegment.cpp",
  "$_src/pathops/SkOpSpan.cpp",
  "$_src/pathops/SkPathOpsAsWinding.cpp",
  "$_src/pathops/SkPathOpsCommon.cpp",
  "$_src/pathops/SkPathOpsConic.cpp",
  "$_src/pathops/SkPathOpsCubic.cpp",
  "$_src/pathops/SkPathOpsCurve.cpp",
  "$_src/pathops/SkPathOpsDebug.cpp",
  "$_src/pathops/SkPathOpsLine.cpp",
  "$_src/pathops/SkPathOpsOp.cpp",
  "$_src/pathops/SkPathOpsQuad.cpp",
  "$_src/pathops/SkPathOpsRect.cpp",
  "$_src/pathops/SkPathOpsSimplify.cpp",
  "$_src/pathops/SkPathOpsTSect.cpp",
  "$_src/pathops/SkPathOpsTightBounds.cpp",
  "$_src/pathops/SkPathOpsTypes.cpp",
  "$_src/pathops/SkPathOpsWinding.cpp",
  "$_src/pathops/SkPathWriter.cpp",
  "$_src/pathops/SkReduceOrder.cpp",

  "$_src/pathops/SkAddIntersections.h",
  "$_src/pathops/SkIntersectionHelper.h",
  "$_src/pathops/SkIntersections.h",
  "$_src/pathops/SkLineParameters.h",
  "$_src/pathops/SkOpAngle.h",
  "$_src/pathops/SkOpCoincidence.h",
  "$_src/pathops/SkOpContour.h",
  "$_src/pathops/SkOpEdgeBuilder.h",
  "$_src/pathops/SkOpSegment.h",
  "$_src/pathops/SkOpSpan.h",
  "$_src/pathops/SkPathOpsBounds.h",
  "$_src/pathops/SkPathOpsCommon.h",
  "$_src/pathops/SkPathOpsConic.h",
  "$_src/pathops/SkPathOpsCubic.h",
  "$_src/pathops/SkPathOpsCurve.h",
  "$_src/pathops/SkPathOpsDebug.h",
  "$_src/pathops/SkPathOpsLine.h",
  "$_src/pathops/SkPathOpsPoint.h",
  "$_src/pathops/SkPathOpsQuad.h",
  "$_src/pathops/SkPathOpsRect.h",
  "$_src/pathops/SkPathOpsTSect.h",
  "$_src/pathops/SkPathOpsTypes.h",
  "$_src/pathops/SkPathWriter.h",
  "$_src/pathops/SkReduceOrder.h",
]

skia_skpicture_public = [
  "$_include/core/SkMultiPictureDraw.h",
  "$_include/core/SkPicture.h",
  "$_include/core/SkPictureRecorder.h",
]

skia_skpicture_sources = [
  "$_include/core/SkMultiPictureDraw.h",
  "$_include/core/SkPicture.h",
  "$_include/core/SkPictureRecorder.h",
  "$_src/core/SkBigPicture.cpp",
  "$_src/core/SkMultiPictureDraw.cpp",
  "$_src/core/SkPicture.cpp",
  "$_src/core/SkPictureCommon.h",
  "$_src/core/SkPictureData.cpp",
  "$_src/core/SkPictureData.h",
  "$_src/core/SkPictureFlat.cpp",
  "$_src/core/SkPictureFlat.h",
  "$_src/core/SkPictureImageGenerator.cpp",
  "$_src/core/SkPicturePlayback.cpp",
  "$_src/core/SkPicturePlayback.h",
  "$_src/core/SkPictureRecord.cpp",
  "$_src/core/SkPictureRecord.h",
  "$_src/core/SkPictureRecorder.cpp",
  "$_src/core/SkRecordedDrawable.cpp",
  "$_src/core/SkRecorder.cpp",
  "$_src/shaders/SkPictureShader.cpp",
  "$_src/shaders/SkPictureShader.h",
]

skia_core_sources += skia_pathops_sources
skia_core_sources += skia_skpicture_sources

skia_core_public += skia_pathops_public
skia_core_public += skia_skpicture_public

skia_core_defines = []  #  Used to be used by Chromium, but no longer.
