# Copyright 2016 Google Inc.
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Things are easiest for everyone if these source paths are absolute.
_src = get_path_info("../src", "abspath")
_include = get_path_info("../include", "abspath")

skia_effects_imagefilter_public = [ "$_include/effects/SkImageFilters.h" ]

skia_effects_imagefilter_sources = [
  "$_src/effects/imagefilters/SkAlphaThresholdImageFilter.cpp",
  "$_src/effects/imagefilters/SkArithmeticImageFilter.cpp",
  "$_src/effects/imagefilters/SkBlendImageFilter.cpp",
  "$_src/effects/imagefilters/SkBlurImageFilter.cpp",
  "$_src/effects/imagefilters/SkColorFilterImageFilter.cpp",
  "$_src/effects/imagefilters/SkComposeImageFilter.cpp",
  "$_src/effects/imagefilters/SkCropImageFilter.cpp",
  "$_src/effects/imagefilters/SkDisplacementMapImageFilter.cpp",
  "$_src/effects/imagefilters/SkDropShadowImageFilter.cpp",
  "$_src/effects/imagefilters/SkImageImageFilter.cpp",
  "$_src/effects/imagefilters/SkLightingImageFilter.cpp",
  "$_src/effects/imagefilters/SkMagnifierImageFilter.cpp",
  "$_src/effects/imagefilters/SkMatrixConvolutionImageFilter.cpp",
  "$_src/effects/imagefilters/SkMergeImageFilter.cpp",
  "$_src/effects/imagefilters/SkMorphologyImageFilter.cpp",
  "$_src/effects/imagefilters/SkOffsetImageFilter.cpp",
  "$_src/effects/imagefilters/SkPictureImageFilter.cpp",
  "$_src/effects/imagefilters/SkRuntimeImageFilter.cpp",
  "$_src/effects/imagefilters/SkShaderImageFilter.cpp",
  "$_src/effects/imagefilters/SkTileImageFilter.cpp",
]
